Added support for a RestFul Services Approach

--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,8 @@
   "author": "RCTT",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongoose": "^5.3.12",
+    "morgan": "^1.9.1"
   }
 }
