--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   "author": "RCTT",
   "license": "ISC",
   "dependencies": {
+    "boom": "^7.2.2",
     "express": "^4.16.4",
     "mongoose": "^5.3.12",
     "morgan": "^1.9.1"
